--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,25 @@ body {
     max-width: 550px;
     margin: 0 auto;
 }
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+     /* border: 1px solid red; */
+}
+
+p {
+    margin: 13.5px 0;
+    /* padding: auto; */
+}
+
+/* h1,h2,h3,h4,h5,h6,p,#menu li a, #footer-links ul li, span, a, div{
+    font-family: "Lato", sans-serif;
+    color: #2C2C2C;
+} */
+
+a{
+    /* color: black; */
+    text-decoration: none;
+}
