Botão de direcionamento para a página de editar perfil

--- a/src/pages/profile/styles.css
+++ b/src/pages/profile/styles.css
@@ -1,9 +1,10 @@
 .profile-container {
     display: grid;
-    grid-template-columns: 110px 1fr;
+    grid-template-columns: 110px 1fr 40px;
     align-items: center;
     gap: 30px;
     padding: 15px 0;
+    /* border: 1px solid red; */
 }
 
 .profile-content > h3 {
@@ -29,4 +30,14 @@
     display: flex;
     gap: 10px;
     margin-top: 15px;
+}
+
+.button-settings {
+    width: 30px;
+    align-self: baseline;
+}
+
+.button-settings svg {
+    padding: 5px 0;
+    cursor: pointer;
 }
