Implementado menu flutuante com botões de ação

--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,10 @@ a{
     text-decoration: none;
 }
 
+.body {
+    position: relative;
+}
+
 .ant-input,
 .ant-input-affix-wrapper,
 .ant-input-affix-wrapper * {
