--- a/src/components/navBar/styles.css
+++ b/src/components/navBar/styles.css
@@ -2,6 +2,10 @@
     width: 100%;
     height: 55px;
     background-color: #370759;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
 }
 
 .navbar-container > nav {
