--- a/src/components/profileInfo/styles.css
+++ b/src/components/profileInfo/styles.css
@@ -41,3 +41,11 @@
     padding: 5px 0;
     cursor: pointer;
 }
+
+.profile-image {
+    width: 115px;
+    height: 115px;
+    border-radius: 50%;
+    object-fit: cover;
+    overflow: hidden;
+}
