Implementando requisição para seguir e deixar de seguir usuários

--- a/src/components/profileInfo/styles.css
+++ b/src/components/profileInfo/styles.css
@@ -36,6 +36,10 @@
     margin-top: 15px;
 }
 
+.profile-buttons > button {
+    width: 115px;
+}
+
 .button-settings {
     width: 30px;
     align-self: baseline;
