--- a/src/components/postFeed/styles.css
+++ b/src/components/postFeed/styles.css
@@ -39,6 +39,13 @@
 
 .post-actions > div {
     padding: 5px 0;
+    width: 50px;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.post-actions > div svg {
     cursor: pointer;
 }
 
