--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ body {
     background-color: #151515;
     color: #F0F0F0;
     position: relative;
-    margin-top: 55px;
+    /* margin-top: 55px; */
 }
 
 .app {
