Início da funcionalidade de pesquisar usuários

--- a/src/components/profileInfo/styles.css
+++ b/src/components/profileInfo/styles.css
@@ -1,3 +1,7 @@
+#profile-page .ant-skeleton-paragraph li {
+    background-color: #fff;
+}
+
 .profile-container {
     display: grid;
     grid-template-columns: 110px 1fr;
