--- a/src/components/navBar/styles.css
+++ b/src/components/navBar/styles.css
@@ -11,4 +11,8 @@
 .navbar-container > nav {
     max-width: 450px;
     margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
 }
