--- a/src/App.css
+++ b/src/App.css
@@ -43,3 +43,19 @@ a{
 .ant-form-item-control {
     flex: none !important;
 }
+
+.full-page-spin {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: calc(100vh - 55px);
+    width: 100%;
+}
+
+.spin-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    width: 100%;
+}
